# personal-nas-cloud

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: FileServer.cpp  FileServer.h
src/ui/: MainWindow.cpp  MainWindow.h  TrayManager.cpp  TrayManager.h
